--- a/index.html
+++ b/index.html
@@ -7,6 +7,39 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="parent">
+      <div class="container">
+        <h1>Age Calculator</h1>
+        <img
+          src="img/medium-shot-smiley-kids-posing-together_23-2149073581.avif"
+          alt="age-calculator"
+          class="home-img"
+        />
+        <br />
+        <div class="name-div">
+          <label for="name">Name:</label>
+          <input type="text" name="name" id="name-input" />
+        </div>
+        <div class="year-div">
+          <label for="year">Year:</label>
+          <input type="number" name="year" id="year-input" />
+        </div>
+        <div class="month-div">
+          <label for="month">Month:</label>
+          <input type="number" name="month" id="month-input" />
+        </div>
+        <div class="day-div">
+          <label for="day">Day:</label>
+          <input type="number" name="day" id="day-input" />
+        </div>
+        <button class="calculate-age-button" id="calculate-age-button">
+          Calculate Age
+        </button>
+        <p id="result"></p>
+      </div>
+    </div>
+    <!--  -->
     <script src="script.js"></script>
+    <!--  -->
   </body>
 </html>
