--- a/index.html
+++ b/index.html
@@ -18,19 +18,24 @@
         <br />
         <div class="name-div">
           <label for="name">Name:</label>
-          <input type="text" name="name" id="name-input" />
+          <input type="text" name="name" id="name-input" autocomplete="off" />
         </div>
         <div class="year-div">
           <label for="year">Year:</label>
-          <input type="number" name="year" id="year-input" />
+          <input type="number" name="year" id="year-input" autocomplete="off" />
         </div>
         <div class="month-div">
           <label for="month">Month:</label>
-          <input type="number" name="month" id="month-input" />
+          <input
+            type="number"
+            name="month"
+            id="month-input"
+            autocomplete="off"
+          />
         </div>
         <div class="day-div">
           <label for="day">Day:</label>
-          <input type="number" name="day" id="day-input" />
+          <input type="number" name="day" id="day-input" autocomplete="off" />
         </div>
         <button class="calculate-age-button" id="calculate-age-button">
           Calculate Age
