styling the result text and making the name input first letter value capitalize when printing the text

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <button class="calculate-age-button" id="calculate-age-button">
           Calculate Age
         </button>
-        <p id="result"></p>
+        <p class="result" id="result"></p>
       </div>
     </div>
     <!--  -->
