--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             required
           />
         </div>
-        <!-- <div class="month-div">
+        <div class="month-div">
           <label for="month">Month:</label>
           <input
             type="number"
@@ -48,7 +48,7 @@
         <div class="day-div">
           <label for="day">Day:</label>
           <input type="number" name="day" id="day-input" autocomplete="off" />
-        </div> -->
+        </div>
         <button class="calculate-age-button" id="calculate-age-button">
           Calculate Age
         </button>
