--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             required
           />
         </div>
-        <div class="year-div">
+        <!-- <div class="year-div">
           <label for="year">Year:</label>
           <input
             type="number"
@@ -35,8 +35,12 @@
             autocomplete="off"
             required
           />
+        </div> -->
+        <div class="date-div">
+          <label for="date">Select:</label>
+          <input type="date" name="date" id="date-input" />
         </div>
-        <div class="month-div">
+        <!-- <div class="month-div">
           <label for="month">Month:</label>
           <input
             type="number"
@@ -48,18 +52,15 @@
         <div class="day-div">
           <label for="day">Day:</label>
           <input type="number" name="day" id="day-input" autocomplete="off" />
-        </div>
+        </div> -->
         <button class="calculate-age-button" id="calculate-age-button">
           Calculate Age
         </button>
         <p class="result" id="result"></p>
       </div>
     </div>
-
-    <!--  -->
-    <input type="date" />
-    <!--  -->
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
+    <script src="index.js"></script>
     <!--  -->
   </body>
 </html>
