--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="parent">
       <div class="container">
-        <h1>Age Calculator</h1>
+        <h1>Age Calculator and Zodiac Sign</h1>
         <img
           src="img/medium-shot-smiley-kids-posing-together_23-2149073581.avif"
           alt="age-calculator"
@@ -26,33 +26,10 @@
             required
           />
         </div>
-        <!-- <div class="year-div">
-          <label for="year">Year:</label>
-          <input
-            type="number"
-            name="year"
-            id="year-input"
-            autocomplete="off"
-            required
-          />
-        </div> -->
         <div class="date-div">
           <label for="date">Select:</label>
           <input type="date" name="date" id="date-input" />
         </div>
-        <!-- <div class="month-div">
-          <label for="month">Month:</label>
-          <input
-            type="number"
-            name="month"
-            id="month-input"
-            autocomplete="off"
-          />
-        </div>
-        <div class="day-div">
-          <label for="day">Day:</label>
-          <input type="number" name="day" id="day-input" autocomplete="off" />
-        </div> -->
         <button class="calculate-age-button" id="calculate-age-button">
           Calculate Age
         </button>
