--- a/index.html
+++ b/index.html
@@ -1,43 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Age Calculator</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <div class="parent">
-      <div class="container">
-        <h1>Age Calculator and Zodiac Sign</h1>
-        <img
-          src="img/medium-shot-smiley-kids-posing-together_23-2149073581.avif"
-          alt="age-calculator"
-          class="home-img"
-        />
-        <br />
-        <div class="name-div">
-          <label for="name">Name:</label>
-          <input
-            type="text"
-            name="name"
-            id="name-input"
-            autocomplete="off"
-            required
-          />
-        </div>
-        <div class="date-div">
-          <label for="date">Select:</label>
-          <input type="date" name="date" id="date-input" />
-        </div>
-        <button class="calculate-age-button" id="calculate-age-button">
-          Calculate Age
-        </button>
-        <p class="result" id="result"></p>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Age Calculator</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <div class="parent">
+    <div class="container">
+      <h1>Age Calculator and Zodiac Sign</h1>
+      <img src="img/medium-shot-smiley-kids-posing-together_23-2149073581.avif" alt="age-calculator" class="home-img" />
+      <br />
+      <div class="name-div">
+        <label for="name">Name:</label>
+        <input type="text" name="name" id="name-input" autocomplete="off" required />
       </div>
+      <div class="date-div">
+        <label for="date">Select:</label>
+        <input type="date" name="date" id="date-input" />
+      </div>
+      <button class="calculate-age-button" id="calculate-age-button">
+        Calculate Age
+      </button>
+      <p class="result" id="result"></p>
     </div>
-    <!-- <script src="script.js"></script> -->
-    <script src="index.js"></script>
-    <!--  -->
-  </body>
+  </div>
+  <!-- <script src="script.js"></script> -->
+  <script src="index2.js"></script>
+  <!--  -->
+</body>
+
 </html>
